fix(attestation): direction label must be right text aligned

--- a/app/assets/stylesheets/attestation.scss
+++ b/app/assets/stylesheets/attestation.scss
@@ -109,6 +109,7 @@
     margin: 5.25mm 0 23.3mm;
     line-height: 14pt;
     font-weight: bold;
+    text-align: right;
   }
 
   .body-start {
